packages/components/blog/source/2-molecules/post-meta/_post-meta-vars.scss
$name-: 'c-post-meta' !default;

$host: (
  '.c-post-meta': (
    gap: var(--spacing-m),
  ),
) !default;

$item: (
  '.c-post-meta': (
    gap: var(--spacing-xs),
    font: var(--ks-font-ui-s),
    color: var(--color-grey-6),
    icon-size: 1.2em,
  ),
) !default;

$author: (
  '.c-post-meta': (
    gap: var(--c-post-meta_item--gap),
    font: var(--c-post-meta_item--font),
    color: var(--c-post-meta_item--color),
    font-weight: var(--ks-font-weight-bold),
    avatar-size: 1.5em,
    avatar-border-radius: 50%,
  ),
) !default;

